--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,3 +22,14 @@ $yellow: #ffc107;
 $green: #28a745;
 $teal: #20c997;
 $cyan: #17a2b8;
+
+$primary:       #CC8DFF;
+$secondary:     #5663F6;
+$success:       $green;
+$info:          $cyan;
+$warning:       $yellow;
+$danger:        $red;
+$light:         $gray-100;
+$dark:          $gray-900;
+
+$font-family-base: 'Ubuntu';
