--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,40 @@
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
+.first-screen {
+  background: url('../images/bg.png') no-repeat center center;
+  background-size: cover;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+}
+
+.first-screen_title {
+  padding-left: 200px;
+
+  > span {
+    display: block;
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 80px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  :nth-child(1) {
+    color: $dark;
+  }
+
+  :nth-child(2) {
+    color: $primary;
+  }
+
+  :nth-child(3) {
+    color: $dark;
+  }
+}
