--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -82,7 +82,7 @@ html, body, #root {
     font-size: 65px;
     font-weight: 700;
     line-height: 80px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    //text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
   :nth-child(1) {
